--- a/tsconfig.path.json
+++ b/tsconfig.path.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@pages/*": ["src/pages/*"],
+      "@styles/*": ["src/styles/*"],
       "@routes/*": ["src/routes/*"],
       "@assets/*": ["src/assets/*"],
       "@helpers/*": ["src/helpers/*"],
