--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react-redux": "^7.1.23",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.24",
+    "redux-mock-store": "^1.5.4",
     "ts-jest": "^27.1.3"
   }
 }
