test: add isAuthenticated test

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.23",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.24",
     "redux-mock-store": "^1.5.4",
