--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     ]
   },
   "devDependencies": {
+    "@types/moxios": "^0.4.15",
     "@types/react-redux": "^7.1.23",
     "@types/redux-mock-store": "^1.0.3",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.24",
+    "moxios": "^0.4.0",
     "redux-mock-store": "^1.5.4",
     "ts-jest": "^27.1.3"
   }
