--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "test:coverage": "craco test -- --coverage"
   },
   "eslintConfig": {
     "extends": [
