--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/react-dom": "^17.0.12",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.26.0",
-    "craco-alias": "^3.0.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,13 +33,12 @@
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
-  "cracoConfig": ".craco.config.js",
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject",
-    "test:coverage": "craco test -- --coverage"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "test:coverage": "react-scripts test -- --coverage"
   },
   "eslintConfig": {
     "extends": [
